# micrographia

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: quickstart_first_model.md
examples/: README.md  run_hello.py
examples/datasets/: note.json  sample_note.txt
examples/manual_plans/: notes.yml  notes_inproc.yml  sample_plan.yaml
examples/tools/: extractor.py
micrographonia/: README.md  __init__.py
micrographonia/core/: __init__.py  constants.py  exit_codes.py  runner.py
micrographonia/docs/: README.md
micrographonia/finetune/: README.md  __init__.py  cli.py
micrographonia/registry/: README.md  __init__.py  manifest.py  registry.py
micrographonia/runtime/: README.md  artifacts.py  cache.py  constants.py  engine.py  errors.py  model_loader.py  preflight.py  retry.py  state.py  tools.py
micrographonia/sdk/: README.md  __init__.py  cli.py  plan_ir.py  validate.py
micrographonia/tools/: README.md  __init__.py
registry/: README.md
registry/manifests/: entity_linker.v1.json  extractor_A.v1.json  kg_writer.v1.json  verifier.v1.json
symphonia/: README.md  __init__.py
symphonia/core/: __init__.py  constants.py  exit_codes.py  runner.py
symphonia/docs/: README.md
symphonia/finetune/: README.md  __init__.py  cli.py
tests/: README.md  test_artifacts_resume.py  test_cache.py  test_cli_summary.py  test_concurrency.py  test_engine_budget_deadline.py  test_engine_needs_missing.py  test_engine_resume.py  test_engine_side_effect.py  test_engine_smoke.py  test_manifest_models.py  test_mixed_tools_plan.py  test_model_loader_hash.py  test_model_loader_hf.py  test_model_loader_s3.py  test_plan_validation.py  test_preflight_error_artifact.py  test_preflight_failfast.py  test_registry.py  test_retry.py  test_runner_exit_codes.py  test_runner_resume_guard.py  test_runner_summary_json.py  test_state_interpolation.py  test_teachers.py  test_tools_http_inproc.py
(+82 files in other folders)
