[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micrographonia"
version = "0.1.0"
description = "Composable small models for structured reasoning."
authors = [
  { name = "Micrographonia Team" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.17",
    "httpx>=0.25",
    "fsspec>=2023.9",
    "typer>=0.9",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["micrographonia*"]
exclude = ["registry*"]

[tool.ruff]
line-length = 88
target-version = "py311"
