[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "symphonia"
version = "0.1.0"
description = "Composable small models for structured reasoning."
authors = [
  { name = "Symphonia Team" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.17",
    "httpx>=0.25",
    "fsspec>=2023.9",
    "typer>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
finetune = [
    "transformers>=4.39,<5",
    "trl>=0.8",
    "peft>=0.10",
    "accelerate>=0.28",
    "datasets>=2.19",
    "huggingface_hub>=0.23",
    "orjson>=3.9",
    "bitsandbytes>=0.43; platform_system != 'Windows'",
    "s3fs>=2023.9",
]

[project.scripts]
micrographonia = "symphonia.sdk.cli:app"

[tool.setuptools.packages.find]
include = ["symphonia*"]
exclude = ["registry*"]

[tool.ruff]
line-length = 88
target-version = "py311"
